@@ -1,5 +1,9 @@
 2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/i18n.h: Always enable grub_gettext.
+
+2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* kern/i386/pc/init.c (make_install_device): Fix a leftover usage of old
 	partition naming style.
 
